# dinscribe

./: .gitignore  README.md  denoise.py  main.py  pyproject.toml  requirements.txt  transcribe.py  utils.py  vad.py
src/dinscribe/: __init__.py  cli.py  config.py  config.yaml  denoise.py  pipeline.py  transcribe.py  utils.py  vad.py  vocab.txt
