[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinscribe"
version = "0.1.1"
description = "Audio denoising and transcription pipeline using Demucs, Silero VAD, and Whisper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Cat Pereira", email = "catpereiradev@gmail.com" },
]
keywords = ["audio", "transcription", "speech", "whisper", "demucs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/catherinepereira/dinscribe"
"Bug Tracker" = "https://github.com/catherinepereira/dinscribe/issues"
dependencies = [
    "demucs>=4.0.0",
    "torchcodec",
    "torch",
    "pydub",
    "packaging",
    "openai-whisper",
    "pyyaml",
]

[project.scripts]
dinscribe = "dinscribe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dinscribe = ["config.yaml", "vocab.txt"]
